Added batch baking
